Debug information when processing db source.